Archive2/b1/4ef1f9f825cc59/output
main.cpp: In function ‘int main()’:
main.cpp:3:18: error: invalid operands of types ‘const char [2]’ and ‘const char [2]’ to binary ‘operator|’
     return "a" | "b";
                  ^
